<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            app:cardElevation="@dimen/_3sdp"
            app:cardCornerRadius="@dimen/_3sdp"
            android:layout_centerInParent="true">


            <LinearLayout android:id="@+id/layoutRootNewOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">


                <LinearLayout
                    android:id="@+id/ll_order_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/order_id"
                        android:textColor="@color/hint_color"
                        android:textSize="@dimen/_12sdp" />

                    <TextView android:id="@+id/textOrderIDNewOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_26sdp"
                        android:fontFamily="@font/nunito_bold"
                        android:text=""
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/order_by"
                        android:textColor="@color/hint_color"
                        android:textSize="@dimen/_12sdp" />

                    <TextView android:id="@+id/textOrderByNewOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:fontFamily="@font/nunito_bold"
                        android:text=""
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/order_at"
                        android:textColor="@color/hint_color"
                        android:textSize="@dimen/_12sdp" />

                    <TextView android:id="@+id/textOrderDateNewOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_23sdp"
                        android:fontFamily="@font/nunito_bold"
                        android:text=""
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sch_ll"
                    android:visibility="gone"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_semibold"
                            android:text="@string/sch_date"
                            android:textColor="@color/hint_color"
                            android:textSize="@dimen/_12sdp" />

                        <TextView android:id="@+id/sch_date_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_23sdp"
                            android:fontFamily="@font/nunito_bold"
                            android:text=""
                            android:textColor="@color/red"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".5dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@color/divider_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/order_detail"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/order_type"
                        android:textColor="@color/hint_color"
                        android:textSize="@dimen/_12sdp" />

                    <TextView android:id="@+id/textOrderTypeNewOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_bold"
                        android:gravity="end"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:textColor="@color/active_tab_color"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/total"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_12sdp" />

                    <TextView android:id="@+id/textOrderTotalNewOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16sdp" />
                </LinearLayout>

                <TextView android:id="@+id/textWaitingForDriver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="end"
                    android:layout_gravity="end|right"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:layout_marginTop="7sp"
                    android:text="Waiting for driver"
                    android:textAlignment="textEnd"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_14sdp" />



                <LinearLayout android:id="@+id/layoutAcceptReject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/_20sdp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_reject"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="30dp"
                        android:background="@drawable/gradient_btn"
                        android:backgroundTint="@null"
                        android:fontFamily="@font/nunito"
                        android:text="@string/reject"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_accept"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="30dp"
                        android:background="@drawable/gradient_btn"
                        android:backgroundTint="@null"
                        android:fontFamily="@font/nunito"
                        android:text="@string/accept"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        android:layout_marginLeft="@dimen/_20sdp"/>
                </LinearLayout>



                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_proceed"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="30dp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/gradient_btn"
                        android:backgroundTint="@null"
                        android:visibility="gone"
                        android:layout_gravity="end"
                        android:fontFamily="@font/nunito"
                        android:text="@string/proceed"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
</layout>