<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_3sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/layoutMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textMenuNameDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5sp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/logout"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_14sdp" />


                <TextView
                    android:id="@+id/textIngrediantsDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:maxLines="2"
                    android:text="@string/are_you_sure_want_to_logout"
                    android:textColor="#1D2226"
                    android:alpha=".6"
                    android:textSize="@dimen/_11sdp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCancelDialog"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/tab_bg"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/purple_700"
                        android:textSize="16dp" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLogoutDialog"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/gradient_btn"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/logout"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </LinearLayout>

            </LinearLayout>





        </LinearLayout>


    </androidx.cardview.widget.CardView>

</layout>